fixed footer icons wrap when resize on large screen in blogpost

--- a/src/stylesheets/BlogPost.module.sass
+++ b/src/stylesheets/BlogPost.module.sass
@@ -22,6 +22,11 @@
   margin: 1.5em 0
   padding: 0.5em 10px
 
+.blogPost div
+  max-width: 640px
+  margin-left: auto
+  margin-right: auto
+
 .blogPost blockquote:before
   color: #ccc
   content: open-quote
